tests/semantic/number_constants/number_constants.dl

.decl R(n:number)
.output R()

R(0).

R(1).

R(-1).
R(- 1).

R(2147483647).
R(2147483648). // error: out of range

R(-2147483648).
R(- 2147483648).

R(-2147483649). // error: out of range
R(- 2147483649). // error: out of range

R(2147483647--2147483648).
R(2147483647 --2147483648).
R(2147483647- -2147483648).
R(2147483647-- 2147483648).
R(2147483647 - -2147483648).
R(2147483647- - 2147483648).
R(2147483647 -- 2147483648).
R(2147483647 - - 2147483648).

R(2147483647-2147483648). // error: out of range
R(2147483647- 2147483648). // error: out of range
R(2147483647 -2147483648). // error: out of range
R(2147483647 - 2147483648). // error: out of range
